Fix for booking form on small screens

--- a/cciw/cciwmain/static/css/style.less
+++ b/cciw/cciwmain/static/css/style.less
@@ -1056,4 +1056,10 @@ table td.price {
         font-size: 14px;
         line-height: 21px;
     }
+
+    div.formrow .field ul {
+        display: block;
+        clear: left;
+        margin-left: 0px;
+    }
 }
